# ul-timetable-companion

./: .gitignore  .repoignore  README.md  pyproject.toml  pytest_test.py  scraper.py  setup.py
output/data/: calendar.ics  table_example.txt  timetable.json  timetable_example.json
ul_timetable_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
